@@ -3,40 +3,40 @@ from admin_tools.dashboard import modules, Dashboard, AppIndexDashboard
 
 # to activate your index dashboard add the following to your settings.py:
 #
-# ADMIN_TOOLS_INDEX_DASHBOARD = 'pysis.dashboard.CustomIndexDashboard'
+# ADMIN_TOOLS_INDEX_DASHBOARD = 'django_project_template.dashboard.CustomIndexDashboard'
 
 class CustomIndexDashboard(Dashboard):
     """
-    Custom index dashboard for pysis.
+    Custom index dashboard for django_project_template.
     """
     def __init__(self, **kwargs):
-        self.columns = 3
         Dashboard.__init__(self, **kwargs)
 
         self.children.append(modules.AppList(
             title='PySIS',
             include_list=('accounts', 'django.contrib.auth'),
-            css_classes=['collapse', 'open'],
-        ))
-
-        # append an app list module for "Administration"
-        self.children.append(modules.AppList(
-            title='Administration',
-            include_list=('django.contrib',),
-            css_classes=['collapse', 'closed'],
+            css_classes=['column_1', 'collapse', 'open'],
         ))
 
         # append an app list module for "Applications"
         self.children.append(modules.AppList(
             title='Applications',
             exclude_list=('django.contrib',),
-            css_classes=['collapse', 'closed'],
+            css_classes=['column_1', 'collapse', 'closed'],
         ))
+
+        # append an app list module for "Administration"
+        self.children.append(modules.AppList(
+            title='Administration',
+            include_list=('django.contrib',),
+            css_classes=['column_1', 'collapse', 'closed'],
+        ))
+
 
         # append a link list module for "quick links"
         self.children.append(modules.LinkList(
             title='Quick links',
-            column=3,
+            css_classes=['column_2', 'collapse', 'open'],
             layout='inline',
             draggable=False,
             deletable=False,
@@ -59,10 +59,9 @@ class CustomIndexDashboard(Dashboard):
 
         # append a recent actions module
         self.children.append(modules.RecentActions(
-            column=3,
             title='Recent Actions',
+            css_classes=['column_2', 'collapse', 'open'],
             limit=5,
-            css_classes=['collapse', 'closed'],
         ))
 
 
@@ -75,11 +74,11 @@ class CustomIndexDashboard(Dashboard):
 
 # to activate your app index dashboard add the following to your settings.py:
 #
-# ADMIN_TOOLS_APP_INDEX_DASHBOARD = 'pysis.dashboard.CustomAppIndexDashboard'
+# ADMIN_TOOLS_APP_INDEX_DASHBOARD = 'django_project_template.dashboard.CustomAppIndexDashboard'
 
 class CustomAppIndexDashboard(AppIndexDashboard):
     """
-    Custom app index dashboard for pysis.
+    Custom app index dashboard for django_project_template.
     """
     def __init__(self, *args, **kwargs):
         AppIndexDashboard.__init__(self, *args, **kwargs)
@@ -90,13 +89,14 @@ class CustomAppIndexDashboard(AppIndexDashboard):
         # append a model list module
         self.children.append(modules.ModelList(
             title=self.app_title,
+            css_classes=['column_1', 'collapse', 'open'],
             models=self.models,
         ))
 
         # append a recent actions module
         self.children.append(modules.RecentActions(
-            column=2,
             title='Recent Actions',
+            css_classes=['column_2', 'collapse', 'open'],
             include_list=self.get_app_content_types(),
         ))
 
