@@ -1,1 +1,1 @@
-/home/ramana/virtualenvs/pysis/src/django-grappelli/grappelli/media/
+/virtualenvs/pysis/src/django-grappelli/grappelli/media/
