@@ -1,3 +1,4 @@
+Revision 81 	 2010-10-21 	 Changes to requirements 
 Revision 80 	 2010-10-19 	 Initialized Ditz bug database 
 Revision 79 	 2010-10-19 	 Refactored some config stuff 
 Revision 78 	 2010-09-15 	 Prettifying Student profile listing pages 
